konfiguracja wzorca hasła