@@ -1,6 +1,5 @@
 package pl.wturnieju.validator;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -11,16 +10,23 @@ import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.context.annotation.Import;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 
+import pl.wturnieju.config.user.AuthConfiguration;
 import pl.wturnieju.exception.ValidationException;
+import pl.wturnieju.service.IValidatorService;
+import pl.wturnieju.service.impl.ValidatorService;
 
+@Import(value = {AuthConfiguration.class, ValidatorService.class})
 @ExtendWith(SpringExtension.class)
 class PasswordValidatorTest {
 
     private Map<PasswordType, String> passwords;
 
-    private PasswordValidator validator;
+    @Autowired
+    private IValidatorService validatorService;
 
     @BeforeEach
     public void setUp() {
@@ -30,12 +36,14 @@ class PasswordValidatorTest {
         passwords.put(PasswordType.LETTER_NUMBER_SPECIAL, "a1.");
         passwords.put(PasswordType.BIG_LETTER_NUMBER_SPECIAL, "Aa1.");
         passwords.put(PasswordType.LETTER_NUMBER_8_LEN_SPECIAL, "a1.asdfa");
-        passwords.put(PasswordType.BIG_LETTER_NUMBER_8_SPECIAL, "Aa1.asdf");
-        validator = new PasswordValidator();
+        passwords.put(PasswordType.BIG_LETTER_SMALL_LETTER_NUMBER_8, "Aa8aaaaa");
+        passwords.put(PasswordType.BIG_LETTER_SMALL_LETTER_NUMBER_8_SPECIAL, "Aa1.asdf");
     }
 
     protected List<String> getValidInput() {
-        return Collections.singletonList(passwords.get(PasswordType.BIG_LETTER_NUMBER_8_SPECIAL));
+        return List.of(
+                passwords.get(PasswordType.BIG_LETTER_SMALL_LETTER_NUMBER_8_SPECIAL),
+                passwords.get(PasswordType.BIG_LETTER_SMALL_LETTER_NUMBER_8));
     }
 
     protected List<String> getInvalidInput() {
@@ -47,16 +55,21 @@ class PasswordValidatorTest {
 
     @Test
     void validate() {
-        getValidInput().forEach(input -> Assertions.assertTrue(validator.validate(input), input));
-        getInvalidInput().forEach(input -> Assertions.assertFalse(validator.validate(input), input));
+        getValidInput().forEach(input -> Assertions.assertTrue(getPasswordValidator().validate(input), input));
+        getInvalidInput().forEach(input -> Assertions.assertFalse(getPasswordValidator().validate(input), input));
     }
 
     @Test
     void validateAndThrowInvalid() {
         getValidInput().forEach(input -> Assertions
-                .assertDoesNotThrow(() -> validator.validateAndThrowInvalid(input), input));
+                .assertDoesNotThrow(() -> getPasswordValidator().validateAndThrowInvalid(input), input));
         getInvalidInput().forEach(input -> Assertions
-                .assertThrows(ValidationException.class, () -> validator.validateAndThrowInvalid(input), input));
+                .assertThrows(ValidationException.class, () -> getPasswordValidator().validateAndThrowInvalid(input),
+                        input));
+    }
+
+    private IValidator<String> getPasswordValidator() {
+        return validatorService.getPasswordValidator();
     }
 
     private enum PasswordType {
@@ -65,6 +78,7 @@ class PasswordValidatorTest {
         LETTER_NUMBER_SPECIAL,
         BIG_LETTER_NUMBER_SPECIAL,
         LETTER_NUMBER_8_LEN_SPECIAL,
-        BIG_LETTER_NUMBER_8_SPECIAL,
+        BIG_LETTER_SMALL_LETTER_NUMBER_8,
+        BIG_LETTER_SMALL_LETTER_NUMBER_8_SPECIAL,
     }
 }
